[package]
name = "helm_foil"
version = "0.1.0"
description = "Add the ability to use template variable substitution in your values files"
authors = ["Bob Stevenson <rstevenson555@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.3.6"
Inflector = "0.11.4"

